# example

./: .gitignore  CMakeLists.txt  main.cpp
static-lib/: CMakeLists.txt  static_lib.cpp  static_lib.h
